<resources>
    <string name="app_name">WTWApp</string>
    <string name="login_string">Логин</string>
    <string name="password_string">Пароль</string>
    <string name="what_to_string">What to</string>
    <string name="watch_string">Watch?</string>
    <string name="login_btn_string">Войти</string>
    <string name="no_acc_string">Нет аккаунта?</string>
    <string name="reg_call_btn_string">Зарегистрируйся</string>
    <string name="app_logo_description">App logo</string>
    <string name="profile_icon_string">Profile icon</string>
    <string name="reg_string">Зарегистрироваться</string>
    <string name="log_string">Войти</string>
    <string name="check_string">Проверить</string>
    <string name="check_auth_string">Вы уже авторизировались? Теперь нажмите на кнопку ниже.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_string">Популярное</string>
    <string name="rec_string">Рекомендации</string>
    <string name="profile_string">Профиль</string>
    <string name="in_cinema_string">В кинотеатрах</string>
</resources>
