<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".SplashActivity"
    android:id="@+id/splashConstraintLayout">

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/ic_logo_img" />

    <LinearLayout
        android:id="@+id/logoTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoIV"
        android:orientation="vertical"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/what_to_string"
            android:textColor="@color/White"
            android:textSize="40sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/watch_string"
            android:textColor="@color/White"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginEditLayout"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/logoIV">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:layout_marginStart="7dp"
            android:src="@drawable/profile_icon_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/login_string"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edit_text_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIV">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:alpha="0.7"
            android:background="@drawable/circle"
            android:padding="6dp"
            android:src="@drawable/key_dark" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/password_string"
            android:textColor="@color/White"
            android:textColorHint="@color/Gray" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_bg"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/login_btn_string"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditLayout" />

    <LinearLayout android:layout_marginBottom="50dp"
        android:id="@+id/regCallLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/no_acc_string"
            android:textColor="@color/White"
            android:textSize="12sp" />
        <Button
            android:layout_width="120dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/login_btn_bg"
            android:backgroundTint="@color/btnRegColor"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/reg_call_btn_string"
            android:textAlignment="center"
            android:foreground="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEditLayout" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>